--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ header {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: left;
+    position: relative;
 
 }
 
@@ -374,6 +375,7 @@ header {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 
 .third-section-forum input {
@@ -533,6 +535,26 @@ footer a:hover {
 
 
 
+/* alert message */
+
+
+.alert-email-input {
+    position: fixed;
+    width: 90%;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    border-radius: 20px;
+    color: var(--background-color);
+    background-color: var(--text-color);
+    opacity: 1;
+    z-index: 999;
+    display: none;
+}
+
+.change-body-opacity {
+    opacity: 0.5;
+}
 
 
 
